# zhtw

./: .claudeignore  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .zhtwignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.en.md  README.md  SECURITY.md  TESTING.md  THIRD_PARTY_NOTICES.md  codecov.yml  pyproject.toml
.claude/: settings.json
.claude/guides/: debugging.md  decision-trees.md  deep-testing.md  releasing.md  vocabulary.md
.claude/rules/: git-workflow.md  releasing.md
.github/ISSUE_TEMPLATE/: permissioned-user-report.yml
.github/workflows/: benchmark-competitors.yml  ci.yml  codeql.yml  go-binary.yml  publish.yml  sdk-conformance.yml  sdk-dotnet.yml  sdk-go.yml  sdk-java.yml  sdk-rust.yml  sdk-typescript.yml
benchmarks/: bench_csharp.cs  bench_csharp.csproj  bench_go.go  bench_java.java  bench_python.py  bench_rust.rs  bench_typescript.mjs  input.txt  precision_cases.json  run_all.sh
benchmarks/accuracy/: LICENSES.md  README.md  annotation-backlog-v1.json  annotation-backlog-v1.schema.json  blind-v1.expected.schema.json  blind-v1.inputs.json  blind-v1.inputs.schema.json  blind-v1.metadata.json  blind-v2.candidate-pool.json  blind-v2.candidate-pool.schema.json  blind-v2.evaluation-ledger-event.schema.json  blind-v2.expected.schema.json  blind-v2.final-decisions.schema.json  blind-v2.inputs.schema.json  blind-v2.permissioned-user-report-source.schema.json  blind-v2.project-original-source.schema.json  blind-v2.replacements.schema.json  blind-v2.source-classification-decision.schema.json  blind-v2.source-classification-packet.schema.json  blind-v2.source-pilot.schema.json  competitors-lock.schema.json  competitors.lock.json  holdout-regression-candidates-v1.json  holdout-regression-candidates-v1.schema.json  manifest.schema.json  preregistration.schema.json  public-reproduction-seeds-v1.json  ranking-policy-v1.json  regression-v1.json  regression-v1.schema.json
docs/: CI-CD-INTEGRATION.md  CLI-ADVANCED.md  DICTIONARY-COVERAGE.md  audit-report-83ch-2026-03-22.md  audit-report-books.md  precision-standard.md
docs/benchmark/: PERMISSIONED-USER-REPORT-CONSENT.md
docs/deployment/: CI-CD-INTEGRATION.md  README.md
docs/features/: README.md
docs/guides/: CLI-ADVANCED.md  README.md  RELEASE-CHECKLIST.md
docs/plans/: 2026-06-28-precision-next-phase.md  2026-07-03-competitor-precision-plan.md  2026-07-04-market-best-accuracy-plan.md  2026-07-19-external-benchmark-v2-plan.md
docs/releases/: RELEASE-CHECKLIST.md
docs/reports/: DICTIONARY-COVERAGE.md  README.md  accuracy-benchmark-2026-07-18.json  accuracy-benchmark-2026-07-18.md  accuracy-benchmark-2026-07-19.json  accuracy-benchmark-2026-07-19.md  accuracy-exact-sentence-mapping-audit-2026-07-16.json  accuracy-exact-sentence-mapping-audit-2026-07-16.md  accuracy-final-translation-audit-2026-07-19.md  accuracy-final-translation-corrections-2026-07-19.json  accuracy-gemini-independent-semantic-reaudit-500-cases-2026-07-16.json  accuracy-gemini-independent-semantic-reaudit-500-cases-2026-07-16.md  accuracy-ground-truth-corrections-2026-07-16.json  accuracy-ground-truth-corrections-2026-07-16.md  accuracy-ground-truth-corrections-2026-07-18.json  (+653 more)
docs/zhtw-db/: JENKINS.md  (+2 more)
scripts/: accuracy_annotation_status.py  audit_benchmark_publication.py  audit_books.py  audit_idempotency.py  benchmark_metrics.py  blind_v2_governance.py  build_blind_v2_codex_synthesis.py  check_accuracy_backlog.py  compare_blind_v2_source_classifications.py  competitor_benchmark.py  container_competitors.py  create_blind_review_packet.py  create_blind_v2_source_classification_packet.py  create_holdout_annotation_packet.py  discover_competitor_diffs.py  generate_charmap.py  generate_gemini_vertex_advisory.py  generate_holdout_gemini_vertex_advisory.py  import_blind_v2_source_pilot.py  import_naer_terms_benchmark.py  import_opencc.py  import_permissioned_user_report_issue.py  import_ud_gsd_benchmark.py  pre-commit-zhtw.sh  prepare-test-corpus.sh  promote_accuracy_backlog.py  promote_blind_v2_candidates.py  quality_audit.py  record_blind_v2_source_classification_decision.py  release-verify.sh  release.sh  run_accuracy_benchmark.py  run_naer_terms_benchmark.py  run_ud_gsd_benchmark.py  scrape_novel.sh  spike_eval.py  spike_sample.py  validate_benchmark_assets.py  validate_competitor_environment.py  validate_permissioned_user_reports.py
sdk/rust/: .gitignore  Cargo.toml
sdk/rust/zhtw/: Cargo.toml  README.md  build.rs
sdk/rust/zhtw-wasm/: Cargo.toml  README.md  package.json
sdk/rust/zhtw-wasm/src/: lib.rs
sdk/rust/zhtw-wasm/tests/: web.rs
sdk/rust/zhtw/benches/: check.rs  convert.rs
sdk/rust/zhtw/data/: zhtw-data.json
sdk/rust/zhtw/src/: builder.rs  config.rs  converter.rs  error.rs  generated.rs  header.rs  lib.rs  matcher.rs  source.rs
sdk/rust/zhtw/tests/: api.rs  codepoint_index.rs  custom_dict.rs  golden.rs
tests/: test_accuracy_annotation_backlog.py  test_accuracy_holdout.py  test_accuracy_regression.py  test_ambiguous_balanced.py  test_ambiguous_chars.py  test_benchmark_manifests.py  test_benchmark_metrics.py  test_benchmark_publication.py  test_blind_v2_candidate_promotion.py  test_blind_v2_governance.py  test_blind_v2_source_classification_packet.py  test_blind_v2_source_classification_review.py  test_blind_v2_source_pilot.py  test_char_conversion.py  test_charconv.py  test_cli.py  test_competitor_benchmark.py  test_competitor_environment.py  test_config.py  test_converter.py  test_corpus.py  test_dictionary.py  test_dictionary_quality.py  test_discover_competitor_diffs.py  test_edge_cases.py  test_encoding.py  test_export.py  test_gold_comparison.py  test_golden_rule_battery.py  test_ignore_directives.py  test_import_terms.py  test_llm_client.py  test_llm_prompts.py  test_lookup.py  test_matcher.py  test_naer_terms_benchmark.py  test_novel.py  test_over_conversion.py  test_permissioned_user_report_issue_import.py  test_permissioned_user_reports.py  (+8 more)
(+235 files in other folders)
