[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zhtw"
version = "2.8.7"
description = "Simplified/HK Traditional to Taiwan Traditional Chinese Converter"
readme = "README.md"
license = "MIT"
authors = [
    { name = "tim Insight", email = "rajatim@gmail.com" }
]
keywords = [
    "chinese",
    "traditional",
    "simplified",
    "taiwan",
    "converter",
    "i18n",
    "l10n",
    "localization",
    "nlp",
    "text-processing",
    "vibe-coding",
    "ai-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Traditional)",
    "Natural Language :: Chinese (Simplified)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Localization",
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "pyahocorasick>=2.0",
    "charset-normalizer>=3.0",
]

[project.optional-dependencies]
llm = [
    "google-generativeai>=0.3",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "pre-commit>=3.0",
]

[project.scripts]
zhtw = "zhtw.cli:main"

[project.urls]
Homepage = "https://github.com/rajatim/zhtw"
Repository = "https://github.com/rajatim/zhtw"
Documentation = "https://github.com/rajatim/zhtw#readme"
Issues = "https://github.com/rajatim/zhtw/issues"
Changelog = "https://github.com/rajatim/zhtw/blob/main/CHANGELOG.md"
"Blog Post (中文)" = "https://timinsight.com/zhtw-vibe-coding-traditional-chinese-converter-zh/"
"Blog Post (English)" = "https://timinsight.com/zhtw-vibe-coding-traditional-chinese-converter-en/"

[tool.hatch.build.targets.wheel]
packages = ["src/zhtw"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
