[workspace]
resolver = "2"
members = ["zhtw", "zhtw-wasm"]

[workspace.package]
version = "4.3.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/rajatim/zhtw"

[workspace.dependencies]
daachorse = "=1.0.0"
phf = { version = "0.11", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
criterion = { version = "0.4", features = ["html_reports"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
